@@ -1,14 +1,13 @@
 object FBatchOberflaeche: TFBatchOberflaeche
   Left = 523
-  Height = 650
+  Height = 520
   Top = 362
-  Width = 978
+  Width = 782
   Caption = 'opsi-script'
-  ClientHeight = 650
-  ClientWidth = 978
+  ClientHeight = 520
+  ClientWidth = 782
   Color = cl3DDkShadow
-  DesignTimePPI = 120
-  Font.Height = 18
+  Font.Height = 14
   Font.Name = 'System'
   Font.Pitch = fpVariable
   OnActivate = FormActivate
@@ -17,30 +16,29 @@ object FBatchOberflaeche: TFBatchOberflaeche
   OnMouseDown = FormMouseDown
   OnMouseMove = FormMouseMove
   OnMouseUp = FormMouseUp
-  OnResize = FormResize
   OnWindowStateChange = FormWindowStateChange
   Position = poScreenCenter
-  LCLVersion = '2.0.8.0'
+  LCLVersion = '2.0.10.0'
   object PanelFillScreen: TPanel
     Left = 0
-    Height = 650
+    Height = 520
     Top = 0
-    Width = 978
+    Width = 782
     Align = alClient
     AutoSize = True
-    ClientHeight = 650
-    ClientWidth = 978
+    ClientHeight = 520
+    ClientWidth = 782
     Color = clMenuBar
-    Font.Height = 18
+    Font.Height = 14
     Font.Name = 'System'
     Font.Pitch = fpVariable
     ParentColor = False
     ParentFont = False
     TabOrder = 0
     object ImageOpsiBackground: TImage
-      Left = 500
+      Left = 304
       Height = 542
-      Top = 134
+      Top = 4
       Width = 489
       Align = alCustom
       Anchors = [akRight, akBottom]
@@ -57,7 +55,7 @@ object FBatchOberflaeche: TFBatchOberflaeche
       ClientHeight = 430
       ClientWidth = 605
       Color = clWindow
-      Font.Height = 18
+      Font.Height = 14
       Font.Name = 'System'
       Font.Pitch = fpVariable
       ParentColor = False
@@ -76,15 +74,15 @@ object FBatchOberflaeche: TFBatchOberflaeche
         Transparent = True
       end
       object LabelProgress: TLabel
-        Left = 36
-        Height = 20
-        Top = 400
-        Width = 655
+        Left = 29
+        Height = 16
+        Top = 320
+        Width = 524
         AutoSize = False
         Caption = 'Activity'
         Font.CharSet = ANSI_CHARSET
         Font.Color = clBlack
-        Font.Height = -15
+        Font.Height = -12
         Font.Name = 'Times New Roman'
         Font.Pitch = fpVariable
         Font.Quality = fqDraft
@@ -93,14 +91,14 @@ object FBatchOberflaeche: TFBatchOberflaeche
         WordWrap = True
       end
       object LabelVersion: TLabel
-        Left = 95
-        Height = 16
-        Top = 20
-        Width = 85
+        Left = 76
+        Height = 13
+        Top = 16
+        Width = 72
         Alignment = taRightJustify
         Caption = 'LabelVersion'
         Font.Color = clBlack
-        Font.Height = 14
+        Font.Height = 11
         Font.Name = 'System'
         Font.Pitch = fpVariable
         Font.Style = [fsBold]
@@ -108,22 +106,22 @@ object FBatchOberflaeche: TFBatchOberflaeche
         ParentFont = False
       end
       object ImageProduct: TImage
-        Left = 280
-        Height = 180
-        Top = 55
-        Width = 180
+        Left = 224
+        Height = 144
+        Top = 44
+        Width = 144
         Center = True
       end
       object LabelProduct: TLabel
-        Left = 160
-        Height = 51
-        Top = 260
-        Width = 421
+        Left = 128
+        Height = 41
+        Top = 208
+        Width = 337
         Alignment = taCenter
         AutoSize = False
         Caption = 'LabelProductImage'
         Font.Color = clBlack
-        Font.Height = 53
+        Font.Height = 42
         Font.Name = 'Arial'
         Font.Pitch = fpVariable
         Font.Style = [fsBold]
@@ -132,30 +130,30 @@ object FBatchOberflaeche: TFBatchOberflaeche
         OptimalFill = True
       end
       object LabelInfo: TLabel
-        Left = 60
-        Height = 20
-        Top = 330
-        Width = 621
+        Left = 48
+        Height = 16
+        Top = 264
+        Width = 497
         Alignment = taCenter
         AutoSize = False
         Caption = 'Info'
         Font.Color = clBlack
-        Font.Height = 21
+        Font.Height = 17
         Font.Name = 'Times New Roman'
         Font.Pitch = fpVariable
         ParentColor = False
         ParentFont = False
       end
       object LabelCommand: TLabel
-        Left = 36
-        Height = 24
-        Top = 380
-        Width = 655
+        Left = 29
+        Height = 19
+        Top = 304
+        Width = 524
         Alignment = taCenter
         AutoSize = False
         Caption = 'Command'
         Font.Color = clBlack
-        Font.Height = 15
+        Font.Height = 12
         Font.Name = 'Times New Roman'
         Font.Pitch = fpVariable
         Font.Style = [fsBold]
@@ -163,15 +161,15 @@ object FBatchOberflaeche: TFBatchOberflaeche
         ParentFont = False
       end
       object LabelDetail: TLabel
-        Left = 36
-        Height = 36
-        Top = 355
-        Width = 655
+        Left = 29
+        Height = 29
+        Top = 284
+        Width = 524
         Alignment = taCenter
         AutoSize = False
         Caption = 'Detail'
         Font.Color = clBlack
-        Font.Height = 21
+        Font.Height = 17
         Font.Name = 'Times New Roman'
         Font.Pitch = fpVariable
         Font.Style = [fsItalic]
@@ -179,43 +177,43 @@ object FBatchOberflaeche: TFBatchOberflaeche
         ParentFont = False
       end
       object ImageLogo1: TImage
-        Left = 75
-        Height = 100
-        Top = 100
-        Width = 100
+        Left = 60
+        Height = 80
+        Top = 80
+        Width = 80
         Center = True
         Transparent = True
       end
       object ImageLogo2: TImage
-        Left = 550
-        Height = 100
-        Top = 100
-        Width = 100
+        Left = 440
+        Height = 80
+        Top = 80
+        Width = 80
         Center = True
         Transparent = True
       end
       object Image1Over: TImage
-        Left = 270
-        Height = 200
-        Top = 45
-        Width = 200
+        Left = 216
+        Height = 160
+        Top = 36
+        Width = 160
         Center = True
         Transparent = True
       end
       object Image2Over: TImage
-        Left = 42
-        Height = 104
-        Top = 444
-        Width = 664
+        Left = 34
+        Height = 83
+        Top = 355
+        Width = 531
         Center = True
         Transparent = True
       end
       object ActivityBar: TProgressBar
-        Left = 104
-        Height = 25
-        Top = 319
-        Width = 588
-        Font.Height = 18
+        Left = 83
+        Height = 20
+        Top = 255
+        Width = 470
+        Font.Height = 14
         Font.Name = 'System'
         Font.Pitch = fpVariable
         ParentFont = False
@@ -229,27 +227,27 @@ object FBatchOberflaeche: TFBatchOberflaeche
     Enabled = False
     Interval = 200
     OnTimer = TimerActivityTimer
-    left = 850
-    top = 70
+    Left = 680
+    Top = 56
   end
   object TimerDetail: TTimer
     Enabled = False
     Interval = 200
     OnTimer = TimerDetailTimer
-    left = 850
-    top = 130
+    Left = 680
+    Top = 104
   end
   object TimerCommand: TTimer
     Enabled = False
     Interval = 200
     OnTimer = TimerCommandTimer
-    left = 910
-    top = 70
+    Left = 728
+    Top = 56
   end
   object TimerProcessMess: TTimer
     Interval = 200
     OnTimer = TimerProcessMessTimer
-    left = 815
-    top = 248
+    Left = 652
+    Top = 198
   end
 end
