@@ -85,7 +85,7 @@ type
       Shift: TShiftState; X, Y: integer);
 
 
-    procedure FormResize(Sender: TObject);
+    //procedure FormResize(Sender: TObject);
     procedure setOutputLevel(const level: integer);
     procedure TimerCommandTimer(Sender: TObject);
     procedure TimerActivityTimer(Sender: TObject);
@@ -1044,6 +1044,7 @@ begin
   FormMoving := False;
 end;
 
+(*
 procedure TFBatchOberflaeche.FormResize(Sender: TObject);
 var
   i: integer;
@@ -1062,6 +1063,7 @@ begin
 
   //LabelVersion.BringToFront
 end;
+*)
 
 //interface
 procedure TFBatchOberflaeche.setVisible(b: boolean);
