@@ -266,8 +266,8 @@ begin
     depotdrive := '/media/opsi_depot';
 {$ENDIF LINUX}
 {$IFDEF DARWIN}
-    //depotdrive := '/Network/opsi_depot';
-    depotdrive := '/Volumes/opsi_depot';
+    depotdrive := '/Network/opsi_depot';
+    //depotdrive := '/Volumes/opsi_depot';
 (*
     RunCommand('sw_vers -productVersion', outstr);
     if trim(outstr) > '10.14' then
