@@ -1,4 +1,11 @@
 [changelog]
+opsiscriptstarter 4.1.0.13
+
+  * macos: change mountpoint to /Network/opsi_depot
+  * oslog: startumessages only for opsiscript
+
+-- d.oertel <d.oertel@uib.de> Fri, 28 Aug 2020 15:00
+
 opsiscriptstarter 4.1.0.12
 
   * oslinmount: start negoiation with vers=3.11
